@@ -2,7 +2,8 @@
 - added PDI support for ATXMega (patch by szulat@www.elektroda.pl 2012-08-16) modified RkamilC 2017-07-16
 - must be tested
 - http://www.elektroda.pl/rtvforum/topic2359783.html?sid=dc5bf363a1210ab871ceb3db697da6e7
--added ATTiny85 MCU as target modified from https://github.com/cpldcpu/USBasp-t 
+- added ATTiny85 MCU as target modified from https://github.com/cpldcpu/USBasp-t 
+- added UART pasthrought support from Eric (emklausATgmail.com) see: https://github.com/coolshou/USBaspTTY/blob/master/README.TXT
   
 
 usbasp (v1.06)
